--- a/week12/Day5/Mini-Project-Task-Management/task-manager/package.json
+++ b/week12/Day5/Mini-Project-Task-Management/task-manager/package.json
@@ -1,7 +1,8 @@
 {
   "name": "task-manager",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "taskController.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
